syntax = "proto3";
package market.proto;

import "market/proto/goods.proto";

message MarketProto {
  Container prices = 1;
  Container bids = 2;
  Container offers = 3;
  Container goods = 4;
  Container volume = 5;
}
